<resources>
    <string name="app_name">Belotinator</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment_label">Belotinator</string>
    <string name="player">Player</string>
    <string name="players_fragment_label">Players</string>
    <string name="player_stats_fragment_label">%1$s\'s statistics</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="fab_legend">Button to add new game or player.</string>
    <string name="action_delete">Delete</string>
    <string name="warning">Warning !</string>
    <string name="confirm_player_delete">Do you want to delete the player %1$s ?</string>
    <string name="confirm_belote_delete">Do you want to delete this belote game ?</string>
    <string name="yes">Yes</string>
    <string name="create_new_player">What\'s the name of the new player ?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="historic_button">Historic</string>
    <string name="background_legend">Background image showing the 2 teams.</string>
    <string name="historic_fragment_label">Games histories</string>
    <string name="belote_fragment_label">Belote</string>
    <string name="empty">\?</string>
    <string name="equip_a">Equip A</string>
    <string name="equip_b">Equip B</string>
    <string name="equip_label">%1$s &amp; %2$s</string>
    <string name="new_round">New round</string>
    <string name="club_trump">Club trump</string>
    <string name="diamond_trump">Diamond trump</string>
    <string name="heart_trump">Heart trump</string>
    <string name="spade_trump">Spade trump</string>
    <string name="without_trump">Without trump</string>
    <string name="all_trumps">All trumps</string>
    <string name="leader">Leader:</string>
    <string name="first_player">First player:</string>
    <string name="declarations">Declarations</string>
    <string name="add_a_declaration">Add a new declaration</string>
    <string name="select_first">"Select a player and a declaration \!"</string>
    <string name="remove_declaration">Select the declaration to delete</string>
    <string name="declaration_legend">Declaration icon</string>
    <string name="missing_value_round">Please fill up all the information first \\!</string>
    <string name="point_tips">%1$s must obtain at least %2$s points.</string>
    <string name="winner">Winners:</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="ongoing_games">Ongoing games</string>
</resources>