<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <Button
            android:id="@+id/button_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:paddingVertical="10dp"
            android:text="@string/players_fragment_label"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_historic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:paddingVertical="10dp"
            android:text="@string/historic_button"
            android:textSize="20sp" />

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ongoing_games"
            android:gravity="center"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="10dp"
            android:letterSpacing="0.1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/black" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_grey">

            <LinearLayout
                android:id="@+id/ongoing_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/fab_legend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>