<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/belote_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/belote_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/belote_equip_maker_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_versus"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/background_legend"
                android:src="@drawable/background"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_playerA_equipA"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:background="@color/equip_A"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_playerA_equipB"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:background="@color/equip_B"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_playerB_equipA"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="176dp"
                android:layout_marginEnd="16dp"
                android:background="@color/equip_A"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_playerB_equipB"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="176dp"
                android:background="@color/equip_B"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/belote_equip_summary_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:onClick="onEquipSummaryClick"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/equipA_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@color/equip_A"
                android:paddingVertical="6dp"
                android:text="@string/equip_a"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/equipB_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@color/equip_B"
                android:paddingVertical="6dp"
                android:text="@string/equip_b"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
